capstone features and html completed

--- a/client/index.css
+++ b/client/index.css
@@ -1,52 +1,58 @@
+html, body {
+	margin: 0 !important;
+	padding: 0 !important;
+	height: 100% !important;
+	width: 100% !important;
+}
 * {
-    box-sizing: border-box; 
-   }
-   body {
-     margin: 0;
-   }
-   #main {
-     display: flex;
-     min-height: calc(100vh - 40vh);
-   }
-   #main > article {
-     flex: 1;
-   }
-   #main > nav, 
-   #main > aside {
-     flex: 0 0 20vw;
-     background: beige;
-   }
-   #main > nav {
-     order: -1;
-   }
-   header, footer, article, nav, aside {
-     padding: 1em;
-   }
-   header, footer {
-     background: rgb(95, 69, 161);
-     height: 20vh;
-   }
-  
-   .button1{
-    display:inline-block;
-    padding:0.35em 1.2em;
-    border:0.1em solid #FFFFFF;
-    margin:0 0.3em 0.3em 0;
-    border-radius:0.12em;
-    box-sizing: border-box;
-    text-decoration:none;
-    font-family:'Roboto',sans-serif;
-    font-weight:300;
-    color:#FFFFFF;
-    text-align:center;
-    transition: all 0.2s;
-    }
-    .button1:hover{
-    color:#000000;
-    background-color:#FFFFFF;
-    }
-    @media all and (max-width:30em){
-     .button1{
-    display:block;
-    margin:0.4em auto;
-    }}
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+.ExternalClass {
+	width: 100%;
+}
+div[style*="margin: 16px 0"] {
+	margin: 0 !important;
+}
+
+table {
+	border-spacing: 0 !important;
+	border-collapse: collapse !important;
+	table-layout: fixed !important;
+	margin: 0 auto !important;
+}
+table table table {
+	table-layout: auto;
+}
+.yshortcuts a {
+	border-bottom: none !important;
+}
+a[x-apple-data-detectors] {
+	color: inherit !important;
+}
+.button-td, .button-a {
+	transition: all 100ms ease-in;
+}
+.button-td:hover, .button-a:hover {
+	background: #555555 !important;
+	border-color: #555555 !important;
+}
+td {
+	padding: 10px;
+	font-family: sans-serif;
+	font-size: 15px;
+	line-height: 20px;
+	color: #555555;
+}
+button {
+  background: #222222; 
+  border: 5px solid #222222; 
+  padding: 0 10px;color: #ffffff; 
+  font-family: sans-serif; font-size: 13px; 
+  line-height: 1.1; 
+  text-align: center; 
+  text-decoration: none; 
+  display: block; 
+  border-radius: 3px; 
+  font-weight: bold;
+}
